vlib/v/checker/tests/unimplemented_interface_g.out
vlib/v/checker/tests/unimplemented_interface_g.vv:12:13: error: `Cat` incorrectly implements method `speak` of interface `Animal`, expected `speak(s string)`
   10 |     mut animals := []Animal{}
   11 |     mut cats := []Cat{}
   12 |     animals << cats
      |                ~~~~
   13 | }
   14 |
