vlib/v/checker/tests/unimplemented_interface_g.vv
interface Animal {
	speak(s string)
}

struct Cat {}

fn (c Cat) speak() {}

fn main() {
	mut animals := []Animal{}
	mut cats := []Cat{}
	animals << cats
}

